# engram

./: .gitignore  COMPRESSION.md  Cargo.toml  README.md  install.sh  test-viz.md  test-viz.sh  uninstall.sh
.github/workflows/: release.yml
examples/: compress_demo.rs
hooks/: engram_post_tool_use_hook.sh  engram_precompact_hook.sh  engram_save_hook.sh  engram_session_start_hook.sh
research/: compact.md  compound-ai.md  context-compression.md  viz-animation.md
src/: activation.rs  birch.rs  compress.rs  embed.rs  extract.rs  lib.rs  main.rs  mcp.rs  viz.rs
tests/: birch_tests.rs
