[package]
name = "engram"
version = "0.1.0"
edition = "2024"
description = "Self-organizing AI agent memory using BIRCH clustering and embeddings"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled", "blob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2"
dirs-next = "2"
libc = "0.2"
stop-words = "0.10"
yake-rust = { version = "1", features = ["en", "ro", "fr", "de", "es", "it", "pt", "nl"] }
