[package]
name = "engram"
version = "0.1.0"
edition = "2024"
description = "Self-organizing AI agent memory using BIRCH clustering and embeddings"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fastembed = { version = "5", default-features = true }
rusqlite = { version = "0.33", features = ["bundled", "blob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2"
dirs-next = "2"
libc = "0.2"
stop-words = "0.10"
yake-rust = { version = "1", features = ["en", "ro", "fr", "de", "es", "it", "pt", "nl"] }
termtree = "0.5"
dotmax = "0.1"
ascii-petgraph = "0.2"
ratatui = "0.29"
crossterm = "0.29"
petgraph = "0.8"
